Updated documentation and added a new profile for GraalVM 24.0.2